syntax = "proto3";
package bus.api;

import "github.com/aperturerobotics/controllerbus/controller/controller.proto";
import "github.com/aperturerobotics/controllerbus/controller/exec/exec.proto";
import "github.com/aperturerobotics/controllerbus/directive/directive.proto";

// GetBusInfoRequest is the request type for GetBusInfo.
message GetBusInfoRequest {
}

// GetBusInfoResponse is the response type for GetBusInfo.
message GetBusInfoResponse {
  // RunningControllers is the list of running controllers.
  repeated controller.Info running_controllers = 1;
  // RunningDirectives is the list of running directives.
  repeated directive.DirectiveState running_directives = 2;
}

// ControllerBusService is a generic controller bus lookup api.
service ControllerBusService {
  // GetBusInfo requests information about the controller bus.
  rpc GetBusInfo(GetBusInfoRequest) returns (GetBusInfoResponse) {}
  // ExecController executes a controller configuration on the bus.
  rpc ExecController(controller.exec.ExecControllerRequest) returns (stream controller.exec.ExecControllerResponse) {}
}